WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
140538
Fix build warning in WebKit2/UIProcess module
https://bugs.webkit.org/show_bug.cgi?id=140538
Summary
Fix build warning in WebKit2/UIProcess module
Shivakumar J M
Reported
2015-01-15 21:46:21 PST
Got below build warnigns in latest build for efl port. [1804/2283] Building CXX object Source/WebKit2/CMakeFiles/WebKit2.dir/UIProcess/Authentication/AuthenticationChallengeProxy.cpp.o ../../Source/WebKit2/UIProcess/Storage/StorageManager.cpp:488:6: warning: unused parameter ‘webProcessProxy’ [-Wunused-parameter] void StorageManager::processWillOpenConnection(WebProcessProxy& webProcessProxy, IPC::Connection& connection) ^ ../../Source/WebKit2/UIProcess/Storage/StorageManager.cpp:493:6: warning: unused parameter ‘webProcessProxy’ [-Wunused-parameter] void StorageManager::processDidCloseConnection(WebProcessProxy& webProcessProxy, IPC::Connection& connection) [1727/2283] Building CXX object Source/WebKit2/CMakeFiles/WebKit2.dir/UIProcess/WebCookieManagerProxyClient.cpp.o ../../Source/WebKit2/UIProcess/WebProcessPool.cpp:779:6: warning: unused parameter ‘process’ [-Wunused-parameter] void WebProcessPool::processWillOpenConnection(WebProcessProxy* process) ^ ../../Source/WebKit2/UIProcess/WebProcessPool.cpp:783:6: warning: unused parameter ‘process’ [-Wunused-parameter] void WebProcessPool::processWillCloseConnection(WebProcessProxy* process)
Attachments
Patch
(2.52 KB, patch)
2015-01-15 21:51 PST
,
Shivakumar J M
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Shivakumar J M
Comment 1
2015-01-15 21:51:19 PST
Created
attachment 244752
[details]
Patch Fix build warnings by removing parameter name from functions. might have casued by:
https://bugs.webkit.org/show_bug.cgi?id=140527
and
https://bugs.webkit.org/show_bug.cgi?id=140505
.
WebKit Commit Bot
Comment 2
2015-01-16 00:12:00 PST
Comment on
attachment 244752
[details]
Patch Clearing flags on attachment: 244752 Committed
r178576
: <
http://trac.webkit.org/changeset/178576
>
WebKit Commit Bot
Comment 3
2015-01-16 00:12:07 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug