Fix build warning in WebKit2/UIProcess module. https://bugs.webkit.org/show_bug.cgi?id=140538

Patch by Shivakumar JM <shiva.jm@samsung.com> on 2015-01-16
Reviewed by Csaba Osztrogonác.

Fix build warnings by removing parameter name from functions

* UIProcess/Storage/StorageManager.cpp:
(WebKit::StorageManager::processWillOpenConnection):
(WebKit::StorageManager::processDidCloseConnection):
* UIProcess/WebProcessPool.cpp:
(WebKit::WebProcessPool::processWillOpenConnection):
(WebKit::WebProcessPool::processWillCloseConnection):

Canonical link: https://commits.webkit.org/158513@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@178576 268f45cc-cd09-0410-ab3c-d52691b4dbfc